# machinelearningjourney

./: 01_intro.ipynb  README.md  RF.ipynb  fastai
R_basics/: R  RBasics.R
advanced analytics/: README.md
advanced analytics/Assignment 1/: 1.1 Data clean split.ipynb  1.1 first EDA.ipynb  1.3.1 Clustering.ipynb  1.3.2 hurdle model.ipynb  1.3.3 Catboost.ipynb  1.3.4 - 1.5 TabPFN,Final LightGBM model & interpretation.ipynb  1.3.4 TABPFN v2.6.ipynb
advanced analytics/Assignment 2/: 2.3. SqueezeNet.ipynb  AssignmentII-Interpretation.ipynb  AssignmentII-Modelling.ipynb
advanced analytics/Assignment 3/: BigData-III.ipynb  README.md  app.py  generate_embeddings.py  pyproject.toml  recommender.py
bayesian/: project2_enzyme_kinetics.R
dataviz/: Visual1.py  Visual2.py  Visual3.py
generalised linear models/: GLM_project_report_Group19.R  data.txt
linearmodels-anova/: KindneyFailure.txt  LM.R
modern data analytics/: DATA.md  MDA-EDA.ipynb  MDA-PreAnalysis.ipynb  README.md  app.py  cluster.ipynb  models.ipynb  pyproject.toml  requirements.txt  utils.py
modern data analytics/data/: final_results.csv  flanders_age_by_municipality_2024.csv  sites.csv  tiers.csv
modern data analytics/data/Shapefile/: sh_statbel_statistical_sectors_20190101.shx  sh_statbel_statistical_sectors_3812_20240101.shx
modern data analytics/data/Shapefile/extra/: GrensinfoLktTyplijn.dbf
stat consulting - project/: app.py  eda.ipynb  model.ipynb
stat_consulting - duolingo datathon/: Datathon-Vis.ipynb  hlr.ipynb
statistical_learning book/: LR.ipynb  readme
(+26 files in other folders)
